# web_scrapping_service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  scraper.py  setup.sh  test_scraper.py  vercel.json
api/: build.sh  index.py
templates/: index.html
